--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a class="header--button" href="">Conoce Nuestros Planes <span></span></a>
+            <a class="header--button" href="">Conoce Nuestros Planes<span></span></a>
         </div>
     </header>
     <main>
@@ -26,8 +26,31 @@
                 <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
             </div>
             <section class="main--tables-container">
-                <div>
-
+                <div class="main--currency-table">
+                    <p class="currency-table--title">Monedas</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitcoin</td>
+                                <td class="table__top-right table__right">$ 1.96<span class="icon-up"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ethereum</td>
+                                <td class="table__right">$ 0.07<span class="icon-down"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ripple</td>
+                                <td class="table__right">$ 2.15<span class="icon-up"></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__bottom-right table__right">$ 4.96<span class="icon-down"></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table--date">
+                        <p><b>Actualizado:</b> 19 de julio 23:43</p>
+                    </div>
                 </div>
             </section>
         </section>
