--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                         <table>
                             <tr>
                                 <td class="table__top-left">Bitcoin</td>
-                                <td class="table__top-right table__right">$ 1.96<span class="icon-up"></span></td>
+                                <td class="table__top-right table__right">$ 1.96<span class="icon icon-up"></span></td>
                             </tr>
                             <tr>
                                 <td>Ethereum</td>
-                                <td class="table__right">$ 0.07<span class="icon-down"></span></td>
+                                <td class="table__right">$ 0.07<span class="icon icon-down"></span></td>
                             </tr>
                             <tr>
                                 <td>Ripple</td>
-                                <td class="table__right">$ 2.15<span class="icon-up"></span></td>
+                                <td class="table__right">$ 2.15<span class="icon icon-up"></span></td>
                             </tr>
                             <tr>
                                 <td class="table__bottom-left">Stellar</td>
-                                <td class="table__bottom-right table__right">$ 4.96<span class="icon-down"></span></td>
+                                <td class="table__bottom-right table__right">$ 4.96<span class="icon icon-down"></span></td>
                             </tr>
                         </table>
                     </div>
