--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
             </div>
             <section class="main--tables-container">
-                <div class="main--currency-table">
-                    <p class="currency-table--title">Monedas</p>
-                    <div class="currency-table--container">
+                <div class="main-table">
+                    <p class="table--title currency--title">Monedas</p>
+                    <div class="table--container">
                         <table>
                             <tr>
                                 <td class="table__top-left">Bitcoin</td>
@@ -48,8 +48,34 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="currency-table--date">
+                    <div class="table--date currency--date">
                         <p><b>Actualizado:</b> 19 de julio 23:43</p>
+                    </div>
+                </div>
+                <div class="main-table">
+                    <p class="table--title fee--title">Comisiones</p>
+                    <div class="table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitrade</td>
+                                <td class="table__top-right table__right">$ 12.96</td>
+                            </tr>
+                            <tr>
+                                <td>Bitpreco</td>
+                                <td class="table__right">$ 13.07</td>
+                            </tr>
+                            <tr>
+                                <td>Novadax</td>
+                                <td class="table__right">$ 13.15</td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Coinext</td>
+                                <td class="table__bottom-right table__right">$ 14.96</span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="table--date fee--date">
+                        <p><b>Actualizado:</b> 19 de julio 23:48</p>
                     </div>
                 </div>
             </section>
