--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <section class="product-cards--container">
                 <article class="product-detail--card">
-                    <span class="clock"></span>
+                    <span class="product-detail--card-icon clock"></span>
                     <p class="product--card-title">Tiempo Real</p>
                     <p class="product--card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
                 </article>
