adding other cards

--- a/index.html
+++ b/index.html
@@ -127,6 +127,22 @@
                         <button class="plan-card--ca">Escoger este <span></span></button>
                     </div>
                 </article>
+                <article class="plans-container--card">
+                    <div class="plan-info--container">
+                        <h3 class="plan-card--title">Pago Mensual</h3>
+                        <p class="plan-card--price"><span>$</span>10</p>
+                        <p class="plan-card--benefits">* Ahorras $2 comparado con al plan semanal.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <div class="plan-info--container">
+                        <h3 class="plan-card--title">Pago Semanal</h3>
+                        <p class="plan-card--price"><span>$</span>3</p>
+                        <p class="plan-card--benefits">* Accede a nuestra plataforma ahora mismo.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
             </section>
         </section>
     </main>
