change week card text

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <div class="plan-info--container">
                         <h3 class="plan-card--title">Pago Semanal</h3>
                         <p class="plan-card--price"><span>$</span>3</p>
-                        <p class="plan-card--benefits">* Accede a nuestra plataforma ahora mismo.</p>
+                        <p class="plan-card--benefits">* Accede a nuestra plataforma con pagos semanales automaticos.</p>
                         <button class="plan-card--ca">Escoger este <span></span></button>
                     </div>
                 </article>
