--- a/index.html
+++ b/index.html
@@ -146,6 +146,23 @@
             </section>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="left">
+            <ul>
+                <li>
+                    <a href="#">Linkedin</a>
+                </li>
+                <li>
+                    <a href="#">Chunchbase</a>
+                </li>
+                <li>
+                    <a href="#">Hackernews</a>
+                </li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="./assets/imgs/footer_logo.svg" alt="logo de Batatabit 2020">
+        </section>
+    </footer>
 </body>
 </html>
